--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -6,10 +6,10 @@
     "mocha": true,
     "jest": true
   },
-  "parser": "babel-eslint",
   "rules": {
     "no-underscore-dangle": [2, { "allowAfterThis": false, "allow": ["_id", "_links", "_embedded"] }],
     "class-methods-use-this": 0,
+    "react/react-in-jsx-scope": 0,
     "react/jsx-filename-extension": 0,
     "react/no-multi-comp": 0,
     "react/prefer-stateless-function": 0,
