--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   }
