--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "mocha": true,
     "jest": true
   },
+  "parser": "babel-eslint",
   "rules": {
     "no-underscore-dangle": [2, { "allowAfterThis": false, "allow": ["_id", "_links", "_embedded"] }],
     "class-methods-use-this": 0,
