--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
     "import/no-extraneous-dependencies": 0,
     "import/extensions": 0,
     "react/no-array-index-key": 0,
-    "react/require-default-props": 0
+    "react/require-default-props": 0,
+    "import/prefer-default-export": 0
   },
   "globals": {
     "React": true,
